# Tonal-Stabilizer

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
stabilizer/: __main__.py  formator.py  frameloader.py  mainwindow.py  pipeline.py  tonalprocessor.py
