[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tonal-stabilizer"
version = "0.1.0"
description = "Application GUI pour stabilisation tonale de vidéos et d'images"
readme = "README.md"
requires-python = ">=3.8"
authors = [ {name ="Paolo Cheype, Louis Dorlencourt"} ]

dependencies = [
  "PySide6 >=6.0.0",
  "numpy >=1.21.0",
  "opencv-python >=4.5.0",
]


[project.scripts]
stabilizer = "stabilizer.mainwindow:main"

[tool.setuptools.packages.find]
where = ["stabilizer"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
